# RGK

./: .clang_complete  .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  README.md  camera.cpp  camera.hpp  config.cpp  config.hpp  main.cpp  outbuffer.cpp  outbuffer.hpp  primitives.cpp  primitives.hpp  ray.hpp  render.cpp-disabled  render.hpp  scene.cpp  scene.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp
cmake/: Findassimp.cmake  Findembree.cmake
scenes/: box1.json  box1.rtc  box2.json  box3.rtc  box4.json  box4.rtc  box6.json  box8.json  box8.rtc  buddha.json  buddha.rtc  cb1.json  cb1.rtc  coffee.json  conference.json  cornell-box-spheres.json  cornell-box.json  cube.json  cube.rtc  cube1.json  cube3-b.json  cube3.rtc  cube4.json  cube4.rtc  cube_flat.json  cube_flat.rtc  dabrovic-sponza-global3.rtc  dabrovic-sponza2.rtc  dragon-sponza.json  dragon.rtc  floor.rtc  floor2.json  floor3.json  primitives1.json  rubiks-bump.json  rubiks.json  sibenik.json  sibenik2.json  sibenik2.rtc  sibenik3.json  (+8 more)
scenes/cubes/: cube3.mtl
scenes/envmap/: cloudy1.hdr.xmp
src/: CMakeLists.txt  brdf.cpp  brdf.hpp  camera.cpp  camera.hpp  config.cpp  config.hpp  glm.hpp  global_config.cpp  global_config.hpp  jsonutils.cpp  jsonutils.hpp  main.cpp  out.cpp  path_tracer.cpp  path_tracer.hpp  primitives.cpp  primitives.hpp  radiance.hpp  random.hpp  random_utils.hpp  ray_tracer.cpp  ray_tracer.hpp  render_driver.cpp  render_driver.hpp  sampler.hpp  scene.cpp  scene.hpp  scene_intersect.cpp  texture.cpp  texture.hpp  tracer.cpp  tracer.hpp  utils.cpp  utils.hpp
src/LTC/: ltc.cpp  ltc.hpp  ltc_beckmann.cpp  ltc_beckmann.hpp  ltc_beckmann_inc.cpp
src/bxdf/: bxdf.cpp  bxdf.hpp
